Customer dashboard modified

--- a/templates/customer_dashboard.html
+++ b/templates/customer_dashboard.html
@@ -535,7 +535,7 @@
                     <div class="user-info justify-content-end">
                         <div class="user-avatar">{{ customer.initials }}</div>
                         <div>
-                            <div class="fw-bold">{{ customer.cus_name }}</div>
+                            <div class="fw-bold">Welcome {{ customer.cus_name }}</div>
                             <div class="small text-muted">Customer</div>
                         </div>
                         <div class="dropdown ms-3">
